--- a/android/Broadcast5_forceOff/app/src/main/AndroidManifest.xml
+++ b/android/Broadcast5_forceOff/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Broadcast4_forceOff"
+        android:theme="@style/Theme.Broadcast5_forceOff"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".BaseActivity"
-            android:exported="true">
+        <activity
+            android:name=".MainActivity">
 
         </activity>
     </application>
