--- a/android/RuntimePermission/app/src/main/AndroidManifest.xml
+++ b/android/RuntimePermission/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Broadcast4_forceOff"
+        android:theme="@style/Theme.RuntimePermission"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -20,14 +25,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".LoginActivity"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".BaseActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
